kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lfp-appeals-frontend
spec:
  selector:
    matchLabels:
      app: lfp-appeals-frontend
  template:
    metadata:
      labels:
        app: lfp-appeals-frontend
    spec:
      containers:
        - name: lfp-appeals-frontend
          image: lfp-appeals-frontend:1.0.0
          ports:
            - containerPort: 3000
