kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lfp-appeals-frontend
spec:
  selector:
    app: lfp-appeals-frontend
  ports:
    - protocol: TCP
      port: 3000
